@@ -1,3 +1,6 @@
+Sat, 10 Oct 2020 16:36:44 -0600 Christian J. Robinson
+ * Tweaks, change installation location in Makefile
+
 Fri, 9 Oct 2020 17:31:01 -0600 Christian J. Robinson
  * Transition to using a Vim package directory to keep the entire plugin self-contained
 
